made a console based game warrior_battle.py to learn the basics of classes and objects.

--- a/learning/oops.ipynb
+++ b/learning/oops.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0b0ce532",
    "metadata": {},
    "outputs": [],
@@ -73,165 +73,7 @@
     "hero1 = Hero(\"Ironblade\", power=20, health=100, max_health=100,\n",
     "             about=\"A balanced warrior with solid offense and defense.\")\n",
     "hero2 = Hero(\"Nightshade\", power=15, health=110, max_health=110,\n",
-    "             about=\"A stealthy assassin with resilience and precision.\")\n",
-    "hero3 = Hero(\"Stormcaller\", power=25, health=90, max_health=90,\n",
-    "             about=\"A powerful mage who trades defense for high damage.\")\n",
-    "hero4 = Hero(\"Thunderhoof\", power=18, health=120, max_health=120,\n",
-    "             about=\"A beast with raw endurance and stable damage.\")\n",
-    "hero5 = Hero(\"Asharrow\", power=22, health=95, max_health=95,\n",
-    "             about=\"A swift ranger striking from the shadows.\")\n",
-    "hero6 = Hero(\"Grimwarden\", power=16, health=130, max_health=130,\n",
-    "             about=\"A sturdy tank who wears enemies down.\")\n",
-    "hero7 = Hero(\"Emberfist\", power=28, health=80, max_health=80,\n",
-    "             about=\"An explosive brawler with incredible burst power.\")\n",
-    "hero8 = Hero(\"Frostveil\", power=17, health=115, max_health=115,\n",
-    "             about=\"A steady combatant with balanced tactics.\")\n",
-    "hero9 = Hero(\"Voidstriker\", power=24, health=85, max_health=85,\n",
-    "             about=\"A shadowy figure who strikes quickly and vanishes.\")\n",
-    "hero10 = Hero(\"Sunblade\", power=20, health=100, max_health=100,\n",
-    "              about=\"A noble knight shining with balance and courage.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c01b030d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "import time\n",
-    "import sys\n",
-    "from colorama import Fore\n",
-    "\n",
-    "# Function to create the typewriter effect in python output terminal\n",
-    "def typewriter_effect(sentence, type_delay = 0.05, delete_delay = 0.01):\n",
-    "    # Loop through each character in the sentence\n",
-    "    for char in sentence:\n",
-    "\n",
-    "        # Write, display and delay\n",
-    "        sys.stdout.write(char)\n",
-    "        sys.stdout.flush()\n",
-    "        time.sleep(type_delay)\n",
-    "\n",
-    "    # Pause after printing the entire sentence\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "    # Loop to delete the sentence\n",
-    "    for _ in sentence:\n",
-    "        # Write backspace, space, delete and delay\n",
-    "        sys.stdout.write('\\b \\b')\n",
-    "        sys.stdout.flush()\n",
-    "        time.sleep(delete_delay)\n",
-    "\n",
-    "\n",
-    "def coin_toss():\n",
-    "    your_choice = input(\"Press 'h' for heads or 't' for tails\")\n",
-    "    if your_choice.lower() == 'h' or your_choice.lower() =='t':\n",
-    "        if your_choice == random.choice(['h','t']):\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
-    "    else:\n",
-    "        print('wrong input')\n",
-    "        coin_toss()\n",
-    "\n",
-    "def choose_hero():\n",
-    "    heroes = [hero1, hero2, hero3, hero4, hero5, hero6, hero7, hero8, hero9,hero10]\n",
-    "\n",
-    "    print(f\"{Fore.BLUE + 'HERO_ID':<20} {'NAME':<20} {'POWER':<20} {'HEALTH':<20} {'MAX HEALTH':<20} {'ABOUT':<20}\")\n",
-    "    print(Fore.LIGHTMAGENTA_EX + \"-\" * 140)\n",
-    "    print(Fore.LIGHTMAGENTA_EX + \"-\" * 140)\n",
-    "    for idx, hero in enumerate(heroes,start=1):\n",
-    "        print(f\"{idx: <13} {hero.name:<23} {hero.power:<20} {hero.health:<22} {hero.max_health:<17} {hero.about:<20}\")\n",
-    "        print(Fore.LIGHTMAGENTA_EX + \"-\" * 140)\n",
-    "    \n",
-    "    your_choice = int(input(\"Choose a number between 1 and 10 to select your corresponding warrior\"))\n",
-    "    if your_choice >= 1 and your_choice <=10:\n",
-    "        temp_list = list(range(1,11))\n",
-    "        temp_list.remove(your_choice)\n",
-    "        computer_choice = random.choice(temp_list)\n",
-    "        return f\"hero{str(your_choice)}\" , f\"hero{str(computer_choice)}\"\n",
-    "    else:\n",
-    "        print(\"Wrong input\")\n",
-    "        choose_hero()\n",
-    "\n",
-    "\n",
-    "def battle():\n",
-    "    typewriter_effect(Fore.YELLOW + \"Long ago, in the shadowed valleys of feudal Japan. . .\")\n",
-    "    typewriter_effect(Fore.YELLOW + \"There existed a sacred tradition known only to the most elite warriors\")\n",
-    "    typewriter_effect(Fore.BLUE + \"THE TENFOLD DUEL\",0.1)\n",
-    "    typewriter_effect(Fore.YELLOW + \"Every generation, the ten greatest fighters across the provinces were summoned by a secretive brotherhood of sages\")\n",
-    "    typewriter_effect(Fore.YELLOW + \"Each warrior was unmatched in skill, honor and will\")\n",
-    "    typewriter_effect(Fore.YELLOW + \"But to be remembered as the greatest, one had to prove it in the \")\n",
-    "    typewriter_effect(Fore.BLUE + \"DOJO OF SHADOWS\",0.1)\n",
-    "    typewriter_effect(Fore.YELLOW + \"a hidden arena carved into the heart of MOUNT KAMINARI\")\n",
-    "    typewriter_effect(Fore.BLUE + \"not for land, not for lords, but for legacy\",0.1)\n",
-    "\n",
-    "    typewriter_effect(Fore.GREEN + \"Loading Game . . .\")\n",
-    "    typewriter_effect(Fore.GREEN + \"5 4 3 2 1\", 0.5)\n",
-    "    \n",
-    "    heroes = [hero1, hero2, hero3, hero4, hero5, hero6, hero7, hero8, hero9,hero10]\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "6404c180",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mHERO_ID         NAME                 POWER                HEALTH               MAX HEALTH           ABOUT               \n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "1             Ironblade               20                   100                    100               A balanced warrior with solid offense and defense.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "2             Nightshade              15                   110                    110               A stealthy assassin with resilience and precision.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "3             Stormcaller             25                   90                     90                A powerful mage who trades defense for high damage.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "4             Thunderhoof             18                   120                    120               A beast with raw endurance and stable damage.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "5             Asharrow                22                   95                     95                A swift ranger striking from the shadows.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "6             Grimwarden              16                   130                    130               A sturdy tank who wears enemies down.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "7             Emberfist               28                   80                     80                An explosive brawler with incredible burst power.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "8             Frostveil               17                   115                    115               A steady combatant with balanced tactics.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "9             Voidstriker             24                   85                     85                A shadowy figure who strikes quickly and vanishes.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "10            Sunblade                20                   100                    100               A noble knight shining with balance and courage.\n",
-      "\u001b[95m--------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "('hero8', 'hero6') <class 'tuple'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_y = choose_hero()\n",
-    "print(test_y, type(test_y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "cf9dedba",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
-   "source": [
-    "typewriter_effect(Fore.BLUE + f\"{1+2}\")"
+    "             about=\"A stealthy assassin with resilience and precision.\")"
    ]
   }
  ],
